--- a/Chapter 2.ipynb
+++ b/Chapter 2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b3120f0a",
+   "id": "cde41915",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c9b6b406",
+   "id": "22371c09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "242ad051",
+   "id": "094b71f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f165ae5f",
+   "id": "8cdf7f32",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e029a8a2",
+   "id": "71d51944",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dff11310",
+   "id": "16775353",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ac41bd97",
+   "id": "952d0877",
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f2db0543",
+   "id": "f3a8d2af",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "69bbf1fb",
+   "id": "3f15e057",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9c8e2c67",
+   "id": "42e267be",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8caad4d2",
+   "id": "7f43ae21",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "00f347da",
+   "id": "29017873",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4cbde106",
+   "id": "55483e8a",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "464fdb24",
+   "id": "617628a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4c2093e4",
+   "id": "e51d8a03",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ec8e4ee6",
+   "id": "2ed14ad3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "1db8cce1",
+   "id": "19748d0b",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b9f154d9",
+   "id": "fc66b4a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "cbaa6a81",
+   "id": "1a6e3cc8",
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "1a5e298c",
+   "id": "1f78049b",
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "541b3a3c",
+   "id": "1d1f6767",
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "247efa3f",
+   "id": "7e81d45a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d2ee63e9",
+   "id": "42b72336",
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "67415286",
+   "id": "6e5a67bb",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "aa9d07a6",
+   "id": "4941260c",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "1ec2c0a2",
+   "id": "30eb912a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "6e4750d2",
+   "id": "9ad0ef46",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "f2f50a73",
+   "id": "d2296ce6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "2a7843df",
+   "id": "f6262979",
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "d890ba97",
+   "id": "28884d87",
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "93b16f7e",
+   "id": "2736d02b",
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "607426cb",
+   "id": "4314955f",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "da5ec5ec",
+   "id": "a36857d1",
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "15b83147",
+   "id": "f7264c71",
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1361,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "4be85716",
+   "id": "89e63476",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "26e3df5f",
+   "id": "95a99baa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "3d0e3272",
+   "id": "75e8fae2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1426,7 +1426,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "0ab818af",
+   "id": "b7f6d070",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1435,8 +1435,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "49c642f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 60,
-   "id": "7723d28b",
+   "id": "ac7a8a53",
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "48a94b12",
+   "id": "46f37315",
    "metadata": {},
    "outputs": [
     {
@@ -1479,7 +1487,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "5bf185f3",
+   "id": "c7f93df8",
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1509,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "c50c875c",
+   "id": "47d6c982",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1511,7 +1519,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "32fbee0c",
+   "id": "03e14d76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1522,7 +1530,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "8b588c3a",
+   "id": "5c63769d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1542,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "af1512df",
+   "id": "e71b51b5",
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "7fe5fbf7",
+   "id": "b306da0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1595,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "6d45164c",
+   "id": "384221ce",
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cba14a3",
+   "id": "b0a3521e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1632,7 +1640,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "04d790d5",
+   "id": "56a3d541",
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1664,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "3432020f",
+   "id": "72c4cc8e",
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1688,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "7a612671",
+   "id": "fefe7790",
    "metadata": {},
    "outputs": [
     {
@@ -1705,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "a8855116",
+   "id": "be274b66",
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "fb923b1a",
+   "id": "d061fc8a",
    "metadata": {},
    "outputs": [
     {
@@ -1753,7 +1761,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "979c0a97",
+   "id": "ad27de0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1766,7 +1774,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "ae4a2bf3",
+   "id": "c228c42c",
    "metadata": {},
    "outputs": [
     {
@@ -1792,7 +1800,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "7cc5ecdd",
+   "id": "eb4d5ae6",
    "metadata": {},
    "outputs": [
     {
@@ -1818,7 +1826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67724332",
+   "id": "0ad91049",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1826,7 +1834,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "4bf191b6",
+   "id": "3a09fbd2",
    "metadata": {},
    "outputs": [
     {
@@ -1865,7 +1873,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "af2e094d",
+   "id": "ea816677",
    "metadata": {},
    "outputs": [
     {
@@ -1886,7 +1894,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "a29b93ff",
+   "id": "04d6984f",
    "metadata": {},
    "outputs": [
     {
@@ -1907,7 +1915,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "e1679357",
+   "id": "577987af",
    "metadata": {},
    "outputs": [
     {
@@ -1944,7 +1952,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "a12b11e7",
+   "id": "5babc45c",
    "metadata": {},
    "outputs": [
     {
@@ -1965,7 +1973,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "68565d23",
+   "id": "839de22b",
    "metadata": {},
    "outputs": [
     {
@@ -1991,7 +1999,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "d8e843b2",
+   "id": "d3869d56",
    "metadata": {},
    "outputs": [
     {
@@ -2032,7 +2040,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "b1aa92b2",
+   "id": "c7ca45b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2052,7 +2060,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "ed9087f6",
+   "id": "962d0820",
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2086,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "0827d4a0",
+   "id": "9b1040fa",
    "metadata": {},
    "outputs": [
     {
@@ -2102,7 +2110,7 @@
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "\n",
     "param_grid = [\n",
-    "    {'n_estimators': [3, 10, 30, 50, 70], 'max_features': [2, 4, 6, 8]},\n",
+    "    {'n_estimators': [30, 50, 70], 'max_features': [2, 4, 6, 8]},\n",
     "    {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2, 3, 4]},\n",
     "  ]\n",
     "\n",
@@ -2118,7 +2126,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "5864cba8",
+   "id": "05183f35",
    "metadata": {},
    "outputs": [
     {
@@ -2139,7 +2147,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "9c699c7c",
+   "id": "31e80bb1",
    "metadata": {},
    "outputs": [
     {
@@ -2168,7 +2176,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "d52a14cf",
+   "id": "47ff9a05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2188,7 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "a8592152",
+   "id": "ec49e018",
    "metadata": {},
    "outputs": [
     {
@@ -2214,7 +2222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "537b8234",
+   "id": "7ce2e6a6",
    "metadata": {},
    "outputs": [],
    "source": []
